--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "nuxt": "^3.13.2",
+    "nuxt-swiper": "^1.2.2",
     "sass": "^1.80.3",
     "vue": "latest",
     "vue-router": "latest"
